[gd_scene load_steps=3 format=3 uid="uid://pjoxsk86mfjc"]

[ext_resource type="Script" path="res://scenes/menus/main/main_menu.gd" id="1_kjmph"]
[ext_resource type="PackedScene" uid="uid://bbjn6b5dbkl45" path="res://scenes/menus/settings/settings_menu.tscn" id="2_w1wlx"]

[node name="MainMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_kjmph")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 550
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 550
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 36
alignment = 1

[node name="Title" type="Label" parent="Margin/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Game Title"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Margin/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="Margin/VBoxContainer/Buttons"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="Margin/VBoxContainer/Buttons"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="Margin/VBoxContainer/Buttons"]
layout_mode = 2
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource("2_w1wlx")]
visible = false
layout_mode = 2

[connection signal="pressed" from="Margin/VBoxContainer/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
